# carrick.eu

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  Pipfile  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  sitemap.xml  tags.html  tasks.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
about/: index.html
author/: tom-carrick.html
blog/: index.html
blog/a-slight-simplification-of-class-based-validators/: index.html
blog/automatically-updating-dependencies-with-dependabot/: index.html
blog/django-new/: index.html
blog/ensuring-a-block-is-overridden-in-a-django-template/: index.html
blog/faster-dependabot-updates-with-groups/: index.html
blog/faster-migration-tests/: index.html
blog/ramblings-on-the-2025-dsf-board-elections/: index.html
blog/tags/dependencies/: index.html
blog/tags/django/: index.html
blog/tags/github-actions/: index.html
blog/tags/migrations/: index.html
blog/tags/templates/: index.html
blog/tags/testing/: index.html
blog/testing-django-data-migrations/: index.html
blog/what-to-do-with-djangocontrib/: index.html
blog/you-might-as-well-timestamp-more-things/: index.html
category/: misc.html
content/articles/2022/: auto-update-dependencies.rst  testing_data_migrations.rst
content/articles/2024/: board-election-ramblings.rst  dependabot-groups.rst  django-contrib.rst  django-new.rst  ensure-template-blocks-overridden.rst  faster-migration-tests.rst  you-might-as-well-timestamp-more.rst
content/pages/: about.rst  cv.html  home.rst
cv/: index.html
feeds/: all.atom.xml  dependencies.atom.xml  django.atom.xml  github-actions.atom.xml  migrations.atom.xml  templates.atom.xml  testing.atom.xml
plugins/: pyproject.toml
plugins/pelican/plugins/htmlmin/: __init__.py
tag/: migrations.html
theme/css/: main.css  main.min.css  pygments-default.min.css
(+17 files in other folders)
