[project]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "blacken-docs",
    "pelican",
    "pelican-sitemap",
    "pelican-webassets",
    "pre-commit",
    "pygments",
]
name = "carrick-eu"
version = "0"
requires-python = "~=3.13"

[project.optional-dependencies]
dev = ["pre-commit", "rstcheck"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.isort]
force-single-line = true
